--- a/ATEP/war/ATEP.html
+++ b/ATEP/war/ATEP.html
@@ -11,19 +11,19 @@
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
-    <link type="text/css" rel="stylesheet" href="Test.css">
+    <link type="text/css" rel="stylesheet" href="ATEP.css">
 
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Web Application Starter Project</title>
+    <title>Athletic Training Education Project</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="test/test.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="ATEP/ATEP.nocache.js"></script>
   </head>
 
   <!--                                           -->
@@ -44,11 +44,11 @@
       </div>
     </noscript>
 
-    <h1>Web Application Starter Project</h1>
+    <h1>Athletic Training Education Project</h1>
 
     <table align="center">
       <tr>
-        <td colspan="2" style="font-weight:bold;">Please enter your name:</td>        
+        <td colspan="2" style="font-weight:bold;">Page construction currently in progress...</td>        
       </tr>
       <tr>
         <td id="nameFieldContainer"></td>
