--- a/ATEP Web App/war/ATEP_Web_App.html
+++ b/ATEP Web App/war/ATEP_Web_App.html
@@ -46,17 +46,6 @@
 
     <h1>Athletic Training Education Project</h1>
 
-    <table align="center">
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Please enter your name:</td>        
-      </tr>
-      <tr>
-        <td id="nameFieldContainer"></td>
-        <td id="sendButtonContainer"></td>
-      </tr>
-      <tr>
-        <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
-      </tr>
-    </table>
+    <div id="applicationContainer" align="center"></div>
   </body>
 </html>
